# ======================================================================================
# Project metadata
# ======================================================================================
[project]
name = "optimagic"
description = "Tools to solve difficult numerical optimization problems."
requires-python = ">=3.12"
dependencies = [
    "cloudpickle>=2.2",
    "joblib>=1.1",
    "numpy>=1.26",
    "pandas>=2.1",
    "plotly>=5.14",
    "pybaum>=0.1.2",
    "scipy>=1.11",
    "sqlalchemy>=2.0",
    "annotated-types>=0.4",
    "typing-extensions>=4.5",
]
dynamic = ["version"]
keywords = [
    "nonlinear optimization",
    "optimization",
    "derivative free optimization",
    "global optimization",
    "parallel optimization",
    "statistics",
    "estimation",
    "extremum estimation",
    "inference",
    "numerical differentiation",
    "finite differences",
    "method of simulated moments",
    "maximum likelihood",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
authors = [
    { name = "Janos Gabler", email = "janos.gabler@gmail.com" },
]
maintainers = [
    { name = "Janos Gabler", email = "janos.gabler@gmail.com" },
    { name = "Tim Mensinger", email = "mensingertim@gmail.com" },
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
Repository = "https://github.com/optimagic-dev/optimagic"
Github = "https://github.com/optimagic-dev/optimagic"
Tracker = "https://github.com/optimagic-dev/optimagic/issues"


# ======================================================================================
# Build system configuration
# ======================================================================================
[build-system]
requires = ["hatchling", "hatch_vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.vcs]
version-file = "src/optimagic/_version.py"

[tool.hatch.build.targets.sdist]
exclude = ["tests"]
only-packages = true

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true


# ======================================================================================
# Ruff configuration
# ======================================================================================
[tool.ruff]
target-version = "py312"
fix = true

[tool.ruff.lint]
select = [
  # isort
  "I",
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # flake8-2020
  "YTT",
  # flake8-bugbear
  "B",
  # flake8-quotes
  "Q",
  # pylint
  "PLE", "PLR", "PLW",
  # misc lints
  "PIE",
  # tidy imports
  "TID",
  # implicit string concatenation
  "ISC",
  # pydocstyle
  "D",
	# Checks that function arguments have type annotations
	"ANN001",
	# Checks that public functions and methods have return type annotations
	"ANN201",
]

extend-ignore = [

  # Missing docstrings — not enforced for now
  "D100",  # public module
  "D101",  # public class
  "D102",  # public method
  "D103",  # public function
  "D104",  # public package
  "D105",  # magic method
  "D107",  # __init__
  # Docstring content/style rules — too noisy to enforce for now
  "D205",  # blank line between summary and description
  "D414",  # section has no body
  "D415",  # first line punctuation
  "D417",  # missing argument descriptions
  # allow module import not at top of file, important for notebooks
  "E402",
  # do not assign a lambda expression, use a def
  "E731",
  # Too many arguments to function call
  "PLR0913",
  # Too many returns
  "PLR0911",
  # Too many branches
  "PLR0912",
  # Too many statements
  "PLR0915",
  # Magic number
  "PLR2004",
  # Consider `elif` instead of `else` then `if` to remove indentation level
  "PLR5501",
  # For calls to warnings.warn(): No explicit `stacklevel` keyword argument found
  "B028",
  # Incompatible with formatting
  "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"docs/source/conf.py" = ["E501", "ERA001", "DTZ005"]
"src/optimagic/parameters/kernel_transformations.py" = ["ARG001", "N806", "ANN001", "ANN201"]
"docs/source/*" = ["B018"]
"src/optimagic/algorithms.py" = ["E501"]
"docs/*" = ["ANN001", "ANN201"]
"tests/*" = ["ANN001", "ANN201"]
"src/optimagic/benchmarking/__init__.py" = ["ANN001", "ANN201"]
"src/optimagic/benchmarking/benchmark_reports.py" = ["ANN001", "ANN201"]
"src/optimagic/benchmarking/cartis_roberts.py" = ["ANN001", "ANN201"]
"src/optimagic/benchmarking/get_benchmark_problems.py" = ["ANN001", "ANN201"]
"src/optimagic/benchmarking/more_wild.py" = ["ANN001", "ANN201"]
"src/optimagic/benchmarking/noise_distributions.py" = ["ANN001", "ANN201"]
"src/optimagic/benchmarking/process_benchmark_results.py" = ["ANN001", "ANN201"]
"src/optimagic/benchmarking/run_benchmark.py" = ["ANN001", "ANN201"]

"src/optimagic/differentiation/__init__.py" = ["ANN001", "ANN201"]
"src/optimagic/differentiation/derivatives.py" = ["ANN001", "ANN201"]
"src/optimagic/differentiation/finite_differences.py" = ["ANN001", "ANN201"]
"src/optimagic/differentiation/generate_steps.py" = ["ANN001", "ANN201"]
"src/optimagic/differentiation/richardson_extrapolation.py" = ["ANN001", "ANN201"]

"src/optimagic/examples/__init__.py" = ["ANN001", "ANN201"]
"src/optimagic/examples/numdiff_functions.py" = ["ANN001", "ANN201"]

"src/optimagic/optimization/__init__.py" = ["ANN001", "ANN201"]
"src/optimagic/optimization/algo_options.py" = ["ANN001", "ANN201"]
"src/optimagic/optimization/convergence_report.py" = ["ANN001", "ANN201"]
"src/optimagic/optimization/optimization_logging.py" = ["ANN001", "ANN201"]
"src/optimagic/optimization/optimize_result.py" = ["ANN001", "ANN201"]
"src/optimagic/optimization/optimize.py" = ["ANN001", "ANN201"]
"src/optimagic/optimization/multistart.py" = ["ANN001", "ANN201"]
"src/optimagic/optimization/scipy_aliases.py" = ["ANN001", "ANN201"]
"src/optimagic/optimization/create_optimization_problem.py" = ["ANN001", "ANN201"]

"src/optimagic/optimizers/_pounders/__init__.py" = ["ANN001", "ANN201"]
"src/optimagic/optimizers/_pounders/pounders_auxiliary.py" = ["ANN001", "ANN201"]
"src/optimagic/optimizers/_pounders/pounders_history.py" = ["ANN001", "ANN201"]
"src/optimagic/optimizers/_pounders/_conjugate_gradient.py" = ["ANN001", "ANN201"]
"src/optimagic/optimizers/_pounders/_steihaug_toint.py" = ["ANN001", "ANN201"]
"src/optimagic/optimizers/_pounders/_trsbox.py" = ["ANN001", "ANN201"]
"src/optimagic/optimizers/_pounders/bntr.py" = ["ANN001", "ANN201"]
"src/optimagic/optimizers/_pounders/gqtpar.py" = ["ANN001", "ANN201"]
"src/optimagic/optimizers/_pounders/linear_subsolvers.py" = ["ANN001", "ANN201"]

"src/optimagic/optimizers/__init__.py" = ["ANN001", "ANN201"]
"src/optimagic/optimizers/tranquilo.py" = ["ANN001", "ANN201"]
"src/optimagic/optimizers/pygmo_optimizers.py" = ["ANN001", "ANN201"]
"src/optimagic/optimizers/scipy_optimizers.py" = ["ANN001", "ANN201"]
"src/optimagic/optimizers/nag_optimizers.py" = ["ANN001", "ANN201"]
"src/optimagic/optimizers/neldermead.py" = ["ANN001", "ANN201"]
"src/optimagic/optimizers/nlopt_optimizers.py" = ["ANN001", "ANN201"]
"src/optimagic/optimizers/ipopt.py" = ["ANN001", "ANN201"]
"src/optimagic/optimizers/fides.py" = ["ANN001", "ANN201"]
"src/optimagic/optimizers/pounders.py" = ["ANN001", "ANN201"]
"src/optimagic/optimizers/tao_optimizers.py" = ["ANN001", "ANN201"]


"src/optimagic/parameters/__init__.py" = ["ANN001", "ANN201"]
"src/optimagic/parameters/block_trees.py" = ["ANN001", "ANN201"]
"src/optimagic/parameters/check_constraints.py" = ["ANN001", "ANN201"]
"src/optimagic/parameters/consolidate_constraints.py" = ["ANN001", "ANN201"]
"src/optimagic/parameters/constraint_tools.py" = ["ANN001", "ANN201"]
"src/optimagic/parameters/conversion.py" = ["ANN001", "ANN201"]
"src/optimagic/parameters/nonlinear_constraints.py" = ["ANN001", "ANN201"]
"src/optimagic/parameters/process_constraints.py" = ["ANN001", "ANN201"]
"src/optimagic/parameters/process_selectors.py" = ["ANN001", "ANN201"]
"src/optimagic/parameters/space_conversion.py" = ["ANN001", "ANN201"]
"src/optimagic/parameters/tree_conversion.py" = ["ANN001", "ANN201"]
"src/optimagic/parameters/tree_registry.py" = ["ANN001", "ANN201"]


"src/optimagic/shared/__init__.py" = ["ANN001", "ANN201"]
"src/optimagic/shared/check_option_dicts.py" = ["ANN001", "ANN201"]
"src/optimagic/shared/compat.py" = ["ANN001", "ANN201"]
"src/optimagic/shared/process_user_function.py" = ["ANN001", "ANN201"]

"src/optimagic/visualization/__init__.py" = ["ANN001", "ANN201"]
"src/optimagic/visualization/convergence_plot.py" = ["ANN001", "ANN201"]
"src/optimagic/visualization/backend.py" = ["ANN001", "ANN201"]
"src/optimagic/visualization/deviation_plot.py" = ["ANN001", "ANN201"]
"src/optimagic/visualization/history_plots.py" = ["ANN001", "ANN201"]
"src/optimagic/visualization/plotting_utilities.py" = ["ANN001", "ANN201"]
"src/optimagic/visualization/profile_plot.py" = ["ANN001", "ANN201"]
"src/optimagic/visualization/slice_plot.py" = ["ANN001", "ANN201"]

"src/optimagic/__init__.py" = ["ANN001", "ANN201"]
"src/optimagic/decorators.py" = ["ANN001", "ANN201"]
"src/optimagic/exceptions.py" = ["ANN001", "ANN201"]
"src/optimagic/utilities.py" = ["ANN001", "ANN201"]
"src/optimagic/deprecations.py" = ["ANN001", "ANN201"]

"src/estimagic/__init__.py" = ["ANN001", "ANN201"]
"src/estimagic/examples/__init__.py" = ["ANN001", "ANN201"]
"src/estimagic/examples/logit.py" = ["ANN001", "ANN201"]
"src/estimagic/estimate_ml.py" = ["ANN001", "ANN201"]
"src/estimagic/estimate_msm.py" = ["ANN001", "ANN201"]
"src/estimagic/estimation_summaries.py" = ["ANN001", "ANN201"]
"src/estimagic/msm_weighting.py" = ["ANN001", "ANN201"]
"src/estimagic/bootstrap_ci.py" = ["ANN001", "ANN201"]
"src/estimagic/bootstrap_helpers.py" = ["ANN001", "ANN201"]
"src/estimagic/bootstrap_outcomes.py" = ["ANN001", "ANN201"]
"src/estimagic/bootstrap_samples.py" = ["ANN001", "ANN201"]
"src/estimagic/bootstrap.py" = ["ANN001", "ANN201"]
"src/estimagic/ml_covs.py" = ["ANN001", "ANN201"]
"src/estimagic/msm_covs.py" = ["ANN001", "ANN201"]
"src/estimagic/shared_covs.py" = ["ANN001", "ANN201"]
"src/estimagic/msm_sensitivity.py" = ["ANN001", "ANN201"]
"src/estimagic/estimation_table.py" = ["ANN001", "ANN201"]
"src/estimagic/lollipop_plot.py" = ["ANN001", "ANN201"]
"src/optimagic/visualization/slice_plot_3d.py" = ["ANN001", "ANN201"]

[tool.ruff.lint.pydocstyle]
convention = "google"


# ======================================================================================
# Pytest configuration
# ======================================================================================
[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Using or importing the ABCs from 'collections'",
    "ignore:the imp module is deprecated",
    "ignore:Method .ptp is deprecated and will be removed in a future version. Use numpy.ptp instead.",
    "ignore:In a future version of pandas all arguments of concat except for the argument 'objs' will be keyword-only",
    "ignore:Please use `MemoizeJac` from the `scipy.optimize` namespace",
    "ignore:`scipy.optimize.optimize.MemoizeJac` is deprecated",
    "ignore:Some algorithms did not converge. Their walltime has been set to a very high value instead of infinity because Timedeltas do notsupport infinite values",
    "ignore:In a future version, the Index constructor will not infer numeric dtypes when passed object-dtype sequences",
    "ignore:distutils Version classes are deprecated. Use packaging.version instead",
    "ignore:Standard matrix inversion failed due to LinAlgError",
    "ignore:delta_grad == 0.0",
    "ignore:Widget._active_widgets is deprecated",
    "ignore:Widget._widget_types is deprecated",
    "ignore:Widget.widget_types is deprecated",
    "ignore:Widget.widgets is deprecated",
    "ignore:Parallelization together with",
    "ignore:Conversion of an array with ndim > 0 to a scalar is deprecated",
    "ignore:The following exception was caught when evaluating",
    "ignore:The following exception was caught when calculating",
    "ignore:Usage of the parameter log_options",
]
addopts = ["--doctest-modules", "--pdbcls=pdbp:Pdb"]
markers = [
    "wip: Tests that are work-in-progress.",
    "slow: Tests that take a long time to run and are skipped in continuous integration.",
    "jax: Tests that require jax to be installed and are skipped on non-Linux systems.",
]
norecursedirs = ["docs", ".tools"]


# ======================================================================================
# Misc configuration
# ======================================================================================
[tool.yamlfix]
line_length = 88
sequence_style = "block_style"
none_representation = "null"


# ======================================================================================
# Ty configuration
# ======================================================================================
[tool.ty]
src.include = ["src", ".tools", "tests"]

[tool.ty.analysis]
allowed-unresolved-imports = [
      "petsc4py.**",
      "jax.**",
      "pathos.**",
      "nevergrad.**",
]
replace-imports-with-any = [
    "pybaum",
    "scipy",
    "scipy.linalg",
    "scipy.linalg.lapack",
    "scipy.stats",
    "scipy.optimize",
    "scipy.ndimage",
    "scipy.optimize._trustregion_exact",
    "plotly",
    "plotly.graph_objects",
    "plotly.express",
    "plotly.subplots",
    "matplotlib",
    "matplotlib.pyplot",
    "cyipopt",
    "nlopt",
    "bokeh",
    "bokeh.layouts",
    "bokeh.models",
    "bokeh.plotting",
    "bokeh.application",
    "bokeh.application.handlers",
    "bokeh.application.handlers.function",
    "bokeh.server",
    "bokeh.server.server",
    "bokeh.command",
    "bokeh.command.util",
    "fides",
    "tranquilo",
    "tranquilo.tranquilo",
    "tranquilo.options",
    "tranquilo.process_arguments",
    "dfols",
    "pybobyqa",
    "pygmo",
    "joblib",
    "cloudpickle",
    "numba",
    "optimagic._version",
    "annotated_types",
    "pdbp",
    "iminuit",
    "pygad",
    "pyswarms",
    "pyswarms.backend.topology",
    "yaml",
    "gradient_free_optimizers",
    "gradient_free_optimizers.optimizers.base_optimizer",
  ]


# ======================================================================================
# Pixi configuration
# ======================================================================================
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "win-64"]

# --- Base dependencies (all environments) -------------------------------------------
[tool.pixi.dependencies]
python = ">=3.12,<3.15"
# Prefer conda-forge builds for compiled scientific packages
numpy = ">=2.0.0"
scipy = ">=1.11"
pandas = ">=2.1,<3"
jupyterlab = ">=4.0"
cyipopt = ">=1.4.0"
pygmo = ">=2.19.0"
nlopt = ">=2.7"
statsmodels = ">=0.14"
matplotlib = ">=3.8"
bokeh = ">=3.2"
altair = ">=5.1"
seaborn = ">=0.13"
pyyaml = ">=6.0.1"
jinja2 = ">=3.1"
tranquilo = ">=0.1.1"
iminuit = ">=2.25"
cma = ">=3.3"
pygad = ">=3.2"
pytorch-cpu = ">=2.2"
ruff = ">=0.15.5,<0.16"

[tool.pixi.pypi-dependencies]
optimagic = { path = ".", editable = true }
pdbp = "*"
bayesian-optimization = ">=1.4"
dfo-ls = ">=1.5.3"
py-bobyqa = ">=1.3"
fides = "==0.7.4"
kaleido = ">=0.2.1"
gradient-free-optimizers = ">=1.6.0"
pyswarms = ">=1.3"

# --- Python version features --------------------------------------------------------
[tool.pixi.feature.py312.dependencies]
python = "~=3.12.0"
[tool.pixi.feature.py313.dependencies]
python = "~=3.13.0"
[tool.pixi.feature.py314.dependencies]
python = "~=3.14.0"

# --- Feature: tests (test infrastructure) --------------------------------------------
[tool.pixi.feature.tests.dependencies]
pytest = ">=7.2"
pytest-cov = ">=4.0"
pytest-xdist = ">=3.2"

[tool.pixi.feature.tests.tasks]
tests = { cmd = "pytest", description = "Run the full test suite" }
tests-fast = { cmd = "pytest -m 'not slow and not jax'", description = "Run tests excluding slow and jax tests" }
tests-with-cov = { cmd = "pytest --cov-report=xml --cov=src", description = "Run tests with XML coverage report" }

# --- Feature: type-checking (ty + type stubs) --------------------------------------
[tool.pixi.feature.type-checking.dependencies]
ty = ">=0.0.24,<0.0.25"

[tool.pixi.feature.type-checking.pypi-dependencies]
pandas-stubs = "*"
types-cffi = "*"
types-openpyxl = "*"
types-jinja2 = "*"

[tool.pixi.feature.type-checking.tasks]
ty = { cmd = "ty check", description = "Run ty type checker" }
ty-concise = { cmd = "ty check --output-format concise", description = "Run ty type checker with concise output" }

# --- Feature: linux (Linux-only deps) ------------------------------------------------
[tool.pixi.feature.linux]
platforms = ["linux-64"]
[tool.pixi.feature.linux.dependencies]
jax = ">=0.4.8"
petsc4py = ">=3.18"

# --- Feature: docs -------------------------------------------------------------------
[tool.pixi.feature.docs.dependencies]
sphinx = ">=8.2.3"
sphinxcontrib-bibtex = "*"
sphinx-copybutton = "*"
sphinx-design = "*"
sphinx-llm = "*"
sphinx-llms-txt = "*"
ipython = "*"
ipython_genutils = "*"
myst-nb = "*"
furo = "*"
anywidget = "*"
patsy = "*"

[tool.pixi.feature.docs.pypi-dependencies]
sphinxcontrib-mermaid = "*"
intersphinx-registry = "*"

[tool.pixi.feature.docs.tasks]
build-docs = { cmd = "make html", cwd = "docs", description = "Build the HTML documentation" }

# --- Compat features (version overrides for backward-compat CI) ---------------------
[tool.pixi.feature.old-plotly.dependencies]
plotly = "<6"

[tool.pixi.feature.old-plotly.pypi-dependencies]
kaleido = "<0.3"

[tool.pixi.feature.nevergrad.pypi-dependencies]
bayesian-optimization = "==1.4.0"
nevergrad = "*"

# --- Environments --------------------------------------------------------------------
[tool.pixi.environments]
# Default dev environment (Python 3.14, everything)
default = { features = ["tests", "py314"], solve-group = "py314" }
# Linux CI (with JAX + PETSc)
tests-linux-py312 = { features = ["tests", "linux", "py312"], solve-group = "linux-py312" }
tests-linux-py313 = { features = ["tests", "linux", "py313"], solve-group = "linux-py313" }
tests-linux-py314 = { features = ["tests", "linux", "py314"], solve-group = "linux-py314" }
# macOS/Windows CI
tests-py312 = { features = ["tests", "py312"], solve-group = "py312" }
tests-py313 = { features = ["tests", "py313"], solve-group = "py313" }
tests-py314 = { features = ["tests", "py314"], solve-group = "py314" }
# Backward-compat CI (Python 3.12, lowest supported)
tests-old-plotly = { features = ["tests", "old-plotly", "py312"] }
# Nevergrad CI (bayesian-optimization==1.4.0)
tests-nevergrad-py312 = { features = ["tests", "nevergrad", "py312"] }
tests-nevergrad-py313 = { features = ["tests", "nevergrad", "py313"] }
tests-nevergrad-py314 = { features = ["tests", "nevergrad", "py314"] }
# Type checking
type-checking = { features = ["type-checking", "py314"], solve-group = "py314" }
# Docs
docs = { features = ["docs", "py314"], solve-group = "py314" }
