[metadata]
name = estimagic
# version = 0.1.4
description = Tools to solve difficult numerical optimization problems.
long_description =
        Estimagic is a Python package for nonlinear optimization with or without
        constraints. It is particularly suited to solve difficult nonlinear estimation
        problems. On top, it provides functionality to perform statistical inference on
        estimated parameters.
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
keywords =
    econometrics
    statistics
    estimation
    extremum estimation
    optimization
    inference
    numerical differentiation
    finite differences
    richardson extrapolation
    derivative free optimization
    method of simulated moments
    maximum likelihood
url = https://github.com/OpenSourceEconomics/estimagic
author = Janos Gabler
author_email = janos.gabler@gmail.com

[options]
packages = find:
zip_safe = False
package_dir = =src
python_requires = >=3.8
include_package_data = True
install_requires =
    click
    cloudpickle
    joblib
    numpy>=1.17
    pandas>=1.0
    bokeh>=1.3
    scipy
    fuzzywuzzy
    sqlalchemy>=1.3
    plotly
    dill
    pybaum
    numba


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    estimagic=estimagic.cli:cli

[check-manifest]
ignore =
    src/estimagic/_version.py
