[metadata]
name = estimagic
description = Tools to solve difficult numerical optimization problems.
long_description =
	Estimagic is a Python package for nonlinear optimization with or without
	constraints. It is particularly suited to solve difficult nonlinear estimation
	problems. On top, it provides functionality to perform statistical inference on
	estimated parameters.
license = MIT
classifiers =
	License :: OSI Approved :: MIT License
	Development Status :: 4 - Beta
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Operating System :: MacOS :: MacOS X
	Operating System :: Microsoft :: Windows
	Operating System :: POSIX
	Topic :: Scientific/Engineering
	Intended Audience :: Science/Research
keywords =
	econometrics
	statistics
	estimation
	extremum estimation
	optimization
	inference
	numerical differentiation
	finite differences
	richardson extrapolation
	derivative free optimization
	method of simulated moments
	maximum likelihood
url = https://github.com/OpenSourceEconomics/estimagic
author = Janos Gabler
author_email = janos.gabler@gmail.com

[options]
packages = find:
zip_safe = False
package_dir = =src
python_requires = >=3.8
include_package_data = True
install_requires =
	bokeh<=2.4.3
	click
	cloudpickle
	fuzzywuzzy
	joblib
	numba
	numpy>=1.17.0
	pandas
	plotly
	pybaum >= 0.1.2
	scipy>=1.2.1
	sqlalchemy>=1.3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	estimagic=estimagic.cli:cli

[check-manifest]
ignore =
	src/estimagic/_version.py
