[metadata]
name = estimagic
description = Tools to solve difficult numerical optimization problems.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OpenSourceEconomics/estimagic
author = Janos Gabler
author_email = janos.gabler@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
keywords =
    econometrics
    statistics
    estimation
    extremum estimation
    optimization
    inference
    numerical differentiation
    finite differences
    richardson extrapolation
    derivative free optimization
    method of simulated moments
    maximum likelihood

[options]
packages = find:
install_requires =
    bokeh<=2.4.3
    click
    cloudpickle
    joblib
    numba
    numpy>=1.17.0
    pandas
    plotly
    pybaum>=0.1.2
    scipy>=1.2.1
    sqlalchemy>=1.3
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    estimagic=estimagic.cli:cli

[check-manifest]
ignore =
    src/estimagic/_version.py
